# soc-project

./: .gitignore  README.md
dc/: .gitignore  readme.txt
dc/scripts/: dc_script.tcl
fpga/: .gitignore  readme.txt
fpga/rtl/: concat_rtl.v  rtl.v
hls/: .gitignore  readme.txt
hls/src/: CellMappingTable.h  ChannelCode.h  ConvEncoder.h  GlobalDefinitions.h  Matlib.h  MatlibSigProToolbox.h  MatlibStdToolbox.h  Parameter.h  TableCarMap.h  TableFAC.h  TableMLC.h  Vector.h  ViterbiDecoder.cpp  ViterbiDecoder.h  build_and_run_socX  build_and_run_ubuntu  compile_and_run  compile_standalone.sh  goldenInput_rTow0.h  goldenOutput.h  (+6 more)
profiling/: .gitignore  readme.txt
profiling/drm-1.2.4-fxp/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  config_arm.pl  config_linux.pl  config_linux_arm  config_linux_arm.pl  configure  configure.in  drm.spec  drm.spec.in  libtool
profiling/drm-1.2.4-fxp/arm/: Makefile.gold  config.h  irq.c
profiling/drm-1.2.4-fxp/arm/faad2/: config.h
profiling/drm-1.2.4-fxp/arm/source/: sound.cpp  sound.h
profiling/drm-1.2.4-fxp/common/: .DrmReceiver.cpp.swp  AMDemodulation.cpp  AMDemodulation.h  DRMSignalIO.cpp  DRMSignalIO.h  DataIO.cpp  DataIO.h  DrmReceiver.cpp  DrmReceiver.h  DrmSimulation.cpp  DrmSimulation.h  DrmTransmitter.cpp  DrmTransmitter.h  GlobalDefinitions.h  IQInputFilter.h  InputResample.cpp  InputResample.h  MDI.cpp  MDI.h  MSCMultiplexer.cpp  MSCMultiplexer.h  OFDM.cpp  OFDM.h  Parameter.cpp  Parameter.h  SimulationParameters.cpp  TextMessage.cpp  TextMessage.h
profiling/drm-1.2.4-fxp/common/FAC/: FAC.cpp  FAC.h
profiling/drm-1.2.4-fxp/common/GUI-QT/: AboutDlgbase.ui  AnalogDemDlg.cpp  AnalogDemDlg.h  AnalogDemDlgbase.ui  DRMPlot.cpp  DRMPlot.h  DialogUtil.cpp  DialogUtil.h  MultColorLED.cpp  MultColorLED.h  MultimediaDlg.cpp  MultimediaDlg.h  StationsDlg.cpp  StationsDlg.h  StationsDlgbase.ui  TransmDlg.cpp  TransmDlg.h  fdrmdialog.cpp  fdrmdialog.h  fdrmdialogbase.ui  main.cpp  systemevalDlg.cpp  systemevalDlg.h  systemevalDlgbase.ui
profiling/drm-1.2.4-fxp/common/SDC/: SDC.h  SDCReceive.cpp  SDCTransmit.cpp
profiling/drm-1.2.4-fxp/common/chanest/: ChanEstTime.cpp  ChanEstTime.h  ChannelEstimation.cpp  ChannelEstimation.h  IdealChannelEstimation.cpp  TimeLinear.cpp  TimeLinear.h  TimeWiener.cpp  TimeWiener.h
profiling/drm-1.2.4-fxp/common/datadecoding/: DABMOT.cpp  DABMOT.h  DataDecoder.cpp  DataDecoder.h  Journaline.cpp  Journaline.h  MOTSlideShow.cpp  MOTSlideShow.h
profiling/drm-1.2.4-fxp/common/drm_util/: FXP.h  complex  old_complex.h
profiling/drm-1.2.4-fxp/common/drmchannel/: ChannelSimulation.cpp  ChannelSimulation.h
profiling/drm-1.2.4-fxp/common/interleaver/: SymbolInterleaver.cpp
profiling/drm-1.2.4-fxp/common/matlib/: Matlib.h  MatlibSigProToolbox.cpp  MatlibSigProToolbox.h  MatlibSigProToolbox_FXP.cpp  MatlibSigProToolbox_FXP.h  MatlibStdToolbox.cpp  MatlibStdToolbox.h  MatlibStdToolbox_FXP.cpp  MatlibStdToolbox_FXP.h  fft.hpp  fft_fxp.hpp
profiling/drm-1.2.4-fxp/common/mlc/: BitInterleaver.cpp  BitInterleaver.h  ChannelCode.cpp  ChannelCode.h  ConvEncoder.cpp  ConvEncoder.h  EnergyDispersal.cpp  EnergyDispersal.h  MLC.cpp  MLC.h  Metric.cpp  Metric.h  QAMMapping.cpp  QAMMapping.h  TrellisUpdateMMX.cpp  TrellisUpdateSSE2.cpp  ViterbiDecoder.cpp  ViterbiDecoder.h
profiling/drm-1.2.4-fxp/common/ofdmcellmapping/: CellMappingTable.cpp  CellMappingTable.h  OFDMCellMapping.cpp
profiling/drm-1.2.4-fxp/common/resample/: Resample.cpp  Resample.h  ResampleFilter.h
profiling/drm-1.2.4-fxp/common/sourcedecoders/: AudioSourceDecoder.cpp  AudioSourceDecoder.h
profiling/drm-1.2.4-fxp/common/sync/: .TimeSync.cpp.swp  FreqSyncAcq.cpp  FreqSyncAcq.h  SyncUsingPil.cpp  SyncUsingPil.h  TimeSync.cpp  TimeSync.h  TimeSyncFilter.h  TimeSyncTrack.cpp  TimeSyncTrack.h
profiling/drm-1.2.4-fxp/common/tables/: TableCarMap.h  TableFAC.h  TableQAMMapping.h
profiling/drm-1.2.4-fxp/common/util/: AudioFile.h  Buffer.h  CRC.cpp  CRC.h  Modul.h  Settings.cpp  Settings.h  Utilities.cpp  Utilities.h  Vector.h
profiling/drm-1.2.4-fxp/faad2/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
profiling/drm-1.2.4-fxp/faad2/autom4te.cache/: output.0  requests  traces.0
profiling/drm-1.2.4-fxp/faad2/common/: Makefile  Makefile.in
profiling/drm-1.2.4-fxp/faad2/common/mp4ff/: Makefile  Makefile.in  mp4atom.c  mp4ff.c  mp4ffint.h  mp4util.c
profiling/drm-1.2.4-fxp/faad2/common/mp4ff/.deps/: drms.P  mp4atom.P  mp4ff.P  mp4meta.P  mp4sample.P  mp4tagupdate.P  mp4util.P
profiling/drm-1.2.4-fxp/faad2/frontend/: Makefile  Makefile.in
profiling/drm-1.2.4-fxp/faad2/frontend/.deps/: audio.P  getopt.P  main.P
profiling/drm-1.2.4-fxp/faad2/libfaad/: Makefile  Makefile.in  cfft.lo  common.h  common.lo  common_dummy.c  cscope.out  decoder.c  decoder.lo  drc.lo  drm_dec.lo  error.lo  filtbank.lo  hcr.lo  huffman.lo  ic_predict.lo  is.lo  libfaad.la  lt_predict.lo  mdct.lo  mp4.lo  ms.lo  output.lo  pns.lo  ps_dec.lo  ps_syntax.lo  pulse.lo  rvlc.lo  sbr_dct.lo  sbr_dec.lo  sbr_e_nf.lo  sbr_fbt.lo  sbr_hfadj.lo  sbr_hfgen.lo  sbr_huff.lo  sbr_qmf.lo  sbr_syntax.lo  sbr_tf_grid.lo  specrec.lo  ssr.lo  (+4 more)
profiling/drm-1.2.4-fxp/faad2/libfaad/.deps/: bits.P  cfft.P  common.P  decoder.P  drc.P  drm_dec.P  error.P  filtbank.P  hcr.P  huffman.P  ic_predict.P  is.P  lt_predict.P  mdct.P  mp4.P  ms.P  output.P  pns.P  ps_dec.P  ps_syntax.P  pulse.P  rvlc.P  sbr_dct.P  sbr_dec.P  sbr_e_nf.P  sbr_fbt.P  sbr_hfadj.P  sbr_hfgen.P  sbr_huff.P  sbr_qmf.P  sbr_syntax.P  sbr_tf_grid.P  specrec.P  ssr.P  ssr_fb.P  ssr_ipqf.P  syntax.P  tns.P
profiling/drm-1.2.4-fxp/faad2/libfaad/.libs/: libfaad.lai
profiling/drm-1.2.4-fxp/faad2/plugins/: Makefile  Makefile.in
profiling/drm-1.2.4-fxp/faad2/plugins/xmms/: Makefile  Makefile.in
profiling/drm-1.2.4-fxp/faad2/plugins/xmms/src/: Makefile  Makefile.in
profiling/drm-1.2.4-fxp/linux/: Makefile  Makefile.am  Makefile.in  drm
profiling/drm-1.2.4-fxp/linux/source/: sound.cpp  sound.h
(+68 files in other folders)
